src/components/NavbarComp/NavbarComp.scss
$medDisp: 991px;

.flag {
    margin-top: 15px;
    width: 50px;

    @media (max-width: $medDisp) {
        margin-top: -96px;
    }
}

.navbar-expand-lg .navbar-collapse {

    @media (min-width: 992px) {
        display: flex !important;
        flex-basis: auto;
        height: 3px;
    }
}

.navbar {
    padding-bottom: 0.8rem !important;

    @media (max-width: $medDisp) {
        padding-bottom: 1.2rem !important;
    }

}

@media (max-width: $medDisp) {

    .navbar-collapse {
        background-color: rgb(33 37 41);
        border-radius: 10px;
    }
}


#navigation {
    height: 25px;

    img:hover {
        cursor: pointer;
        opacity: 0.5;
    }
}

.darkModeToggle {
    margin-left: 2px;
}

